# AlgorithmTester

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/algorithms/: AlgorithmFactory.cpp  AlgorithmFactory.h  BaseAlgorithm.cpp  BaseAlgorithm.h  PhaAlgorithm.cpp  PhaAlgorithm.h
